fixed margin collapse and background gradient issues

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
 }
 
 body {
@@ -18,7 +19,6 @@ body {
     rgba(63, 94, 251, 1) 58%,
     rgba(252, 70, 107, 1) 100%
   );
-  background-repeat: no-repeat;
   font-family: "Roboto Mono", monospace;
 }
 
@@ -46,13 +46,14 @@ a:active {
   height: 100%;
   margin: auto;
   max-width: 100rem;
+  padding-top: 40px;
 }
 
 .header {
   text-align: center;
   text-transform: uppercase;
   font-size: 4.8rem;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   background: #121fcf;
   background: linear-gradient(to left, #121fcf 0%, #cf1512 100%);
   -webkit-background-clip: text;
